[package]
authors = ["knoby <maximilian.brinkmann@posteo.de>"]
edition = "2018"
name = "heat_control"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-std-stub = "1.0.2"
crc-any = {version = "2.3.5", default-features = false}
embedded-hal = "0.2.3"
machine = "0.3.0"

[dependencies.avr-device]
features = ["atmega328p"]
version = "0.2.2"

[dependencies.void]
default_features = false
version = "*"

[dependencies.hd44780-driver]
version = "0.4.0"

[dependencies.atmega328p-hal]
features = ["rt"]
git = "https://github.com/Rahix/avr-hal"
rev = "0c6cf1675c2724354f1adeaeee69992acd371e80"

[features]
simulation = []

[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
